add content uslugi page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -41,7 +41,7 @@
          [routerLinkActiveOptions]="{exact:true}">
       <span>Главная</span>
     </div>
-    <div (click)="openMenu()" class="links" routerLink="/our-work" routerLinkActive="active"
+    <div (click)="openMenu()" class="links" routerLink="/our-works" routerLinkActive="active"
          [routerLinkActiveOptions]="{exact:true}">
       <span>Наши работы</span>
     </div>
