--- a/src/app/components/usluga/usluga.component.html
+++ b/src/app/components/usluga/usluga.component.html
@@ -1,55 +1,61 @@
 <div class="usluga">
   <div class="usluga__container">
-    <div class="usluga__image"><img [src]="usluga.src" alt="{{usluga.alt}}"></div>
-    <div class="usluga__description" [ngSwitch]="usluga.key">
+    <div class="usluga__image"><img [src]="usluga?.src" alt="{{usluga?.alt}}"></div>
+    <div class="usluga__title"><h3>{{usluga?.title}}</h3></div>
+    <div class="usluga__description" [ngSwitch]="usluga?.key">
       <div *ngSwitchCase="1">
-        .Сразу следует сказать, что камин, это не средство для обогрева помещения, это больше
-        элемент роскоши, так как камин греет, только в момент горения дров, затем быстро охлаждается, а его дымоход
-        работает как вентиляционный канал. Тем не менее, для его бесперебойной и длительной эксплуатации, сам камин и
-        его дымоход подлежит регулярной очистке, а для поддержания эстетического вида очищают стекло и другие открытые
-        поверхности, которые загрязнились. При горении на внутренних стенках топки и дымохода оседает сажа, которая не
-        только портит внешний вид , но и способствует его разрушению, при больших скоплениях сажи может происходить
-        разрушение швов и самой кирпичной кладки. После каждой топки из камина необходимо удалять все остатки золы, а
-        один - два раза в год, в зависимости от частоты использования, производить полную чистку камина и дымохода. В
-        старину топку камина чистили металлическими щетками, а затем пищевой содой или скипидаром, а наружные мраморные
-        поверхности половинками лимона, завернутыми в тряпочку. В настоящее время используется профессиональная химия,
-        бережно снимающая сажу со стекла и стенок топки камина. При очистке грубых шероховатых поверхностей используется
-        щетка с щетиной средней жесткости. Для очистки наружных поверхностей химические препараты подбираются
-        индивидуально, с учетом вида отделочных материалов. Чистку стекла производят грубой материей с применением
-        средств для мойки окон, а при сильном нагаре - специальными чистящими средствами, на основе щелочи. Перед
-        чисткой топки, стекла и внешних поверхностей, необходимо произвести чистку дымохода камина
+        <div>
+          Сразу следует сказать, что камин, это не средство для обогрева помещения, это больше
+          элемент роскоши, так как камин греет, только в момент горения дров, затем быстро охлаждается, а его дымоход
+          работает как вентиляционный канал. Тем не менее, для его бесперебойной и длительной эксплуатации, сам камин и
+          его дымоход подлежит регулярной очистке, а для поддержания эстетического вида очищают стекло и другие открытые
+          поверхности, которые загрязнились. При горении на внутренних стенках топки и дымохода оседает сажа, которая не
+          только портит внешний вид , но и способствует его разрушению, при больших скоплениях сажи может происходить
+          разрушение швов и самой кирпичной кладки. После каждой топки из камина необходимо удалять все остатки золы, а
+          один - два раза в год, в зависимости от частоты использования, производить полную чистку камина и дымохода. В
+          старину топку камина чистили металлическими щетками, а затем пищевой содой или скипидаром, а наружные
+          мраморные
+          поверхности половинками лимона, завернутыми в тряпочку. В настоящее время используется профессиональная химия,
+          бережно снимающая сажу со стекла и стенок топки камина. При очистке грубых шероховатых поверхностей
+          используется
+          щетка с щетиной средней жесткости. Для очистки наружных поверхностей химические препараты подбираются
+          индивидуально, с учетом вида отделочных материалов. Чистку стекла производят грубой материей с применением
+          средств для мойки окон, а при сильном нагаре - специальными чистящими средствами, на основе щелочи. Перед
+          чисткой топки, стекла и внешних поверхностей, необходимо произвести чистку дымохода камина.
+          <div>
+            <b>Основные неисправности камина:</b>
+            <ul>
+              <li>— отсутствие или ослабление тяги, слабое горение топлива, поступление дыма в помещение;</li>
+              <li>— поступление дыма в помещение при уличном ветре;</li>
+              <li>— дымовой канал покрывается влагой, и на наружной поверхности появляются темные пятна;</li>
+              <li>— сильный перегрев отдельных участков камина;</li>
+              <li>— быстрое охлаждение камина после топки;</li>
+              <li>— разрушение декоративной облицовки камина;</li>
+              <li>— появление в камине или дымоходе сквозных трещин.</li>
+            </ul>
+          </div>
+          <div>
+            <b>Порядок чистки камина:</b>
+            <ul>
+              <li> — перед началом работ камин необходимо протопить и дать остыть;</li>
+              <li> — в комнате, закрыть все окна и двери, чтобы не было сквозняка;</li>
+              <li> — закатать ковер и накрыть всю мебель, чтобы на неё не попали частички сажи, или плотно заклеить
+                скотчем открытую часть портала;
+              </li>
+              <li> — уложить вокруг топки брезентовое или одноразовое полиэтиленовое покрытие;</li>
+              <li> — убрать из очага все незакрепленные предметы;</li>
+              <li> — удалить из топки оставшиеся угли и золу;</li>
+              <li> — очистить дымоход;</li>
+              <li> — металлическими или пластиковыми щетками (в зависимости от типа топки) очистить топку</li>
+              <li> — равномерно нанести на стенки чистящие средства и дать им впитаться, после чего удалить их сухой или
+                влажной тряпкой, в зависимости от типа применяемых средств;
+              </li>
+              <li> — очистить стекло и внешние поверхности;</li>
+              <li> — после выполнения всех работ, произвести контрольную топку.</li>
+            </ul>
+          </div>
+        </div>
 
-        Основные неисправности камина:
-        <ul>
-          <li> отсутствие или ослабление тяги, слабое горение топлива, поступление дыма в помещение</li>
-          <li> поступление дыма в помещение при уличном ветре</li>
-          <li> дымовой канал покрывается влагой, и на наружной поверхности появляются темные пятна</li>
-          <li> сильный перегрев отдельных участков камина</li>
-          <li> быстрое охлаждение камина после топки</li>
-          <li> разрушение декоративной облицовки камина</li>
-          <li> появление в камине или дымоходе сквозных трещин</li>
-        </ul>
-
-        Порядок чистки камина
-
-        <ul>
-
-          <li> перед началом работ камин необходимо протопить и дать остыть</li>
-          <li> в комнате, закрыть все окна и двери, чтобы не было сквозняка</li>
-          <li> закатать ковер и накрыть всю мебель, чтобы на неё не попали частички сажи, или плотно заклеить скотчем
-            открытую часть портала
-          </li>
-          <li> уложить вокруг топки брезентовое или одноразовое полиэтиленовое покрытие</li>
-          <li>убрать из очага все незакрепленные предметы</li>
-          <li> удалить из топки оставшиеся угли и золу</li>
-          <li> очистить дымоход</li>
-          <li>металлическими или пластиковыми щетками (в зависимости от типа топки) очистить топку</li>
-          <li> равномерно нанести на стенки чистящие средства и дать им впитаться, после чего удалить их сухой или
-            влажной тряпкой, в зависимости от типа применяемых средств
-          </li>
-          <li> очистить стекло и внешние поверхности</li>
-          <li> после выполнения всех работ, произвести контрольную топку</li>
-        </ul>
       </div>
       <div *ngSwitchCase="2">В отличие от камина, печь является отопительным устройством, требования к эксплуатации и
         очистке которой, значительно выше, и регламентируются рядом нормативных документов. При эксплуатации печей,
@@ -64,38 +70,44 @@
         уменьшается теплоотдача нагреваемых поверхностей. При значительных отложениях происходит уменьшение сечения
         дымохода и внутренних дымовых каналов (труб), что приводит к нарушению нормального режима удаления продуктов
         сгорания, а при сильных отложениях - к возгоранию сажи.
+        <div>
+          <b>Основные неисправности:</b>
+          <ul>
+            <li> — отсутствие или ослабление тяги, слабое горение топлива, поступление дыма в помещение при открытой
+              топочной дверке;
+            </li>
+            <li> — поступление дыма в помещение через топочную дверку при ветре;</li>
+            <li> — дымовой канал покрывается влагой и на наружной поверхности появляются темные пятна;</li>
+            <li> — выпадение топочных дверок и другой фурнитуры;</li>
+            <li> — недостаточный нагрев повехностей;</li>
+            <li> — сильный перегрев отдельных участков;</li>
+            <li> — быстрое охлаждение печи после топки;</li>
+            <li> — появление в кладке сквозных трещин, не поддающихся заделке;</li>
+            <li> — установка печных приборов, не соответствующих размеров, выступы
+              и шероховатости внутри дымовых каналов Своевременный и качественный ремонт печи имеет большое значение в
+              сохранении и поддержании прибора в нормальном эксплуатационном состоянии, а также обеспечении санитарной и
+              пожарной безопасности. В зависимости от характера и сложности работ проводится текущий, средний и
+              капитальный
+              ремонт.
+            </li>
+          </ul>
+        </div>
 
-        Основные неисправности
-        <ul>
-          <li> отсутствие или ослабление тяги, слабое горение топлива, поступление дыма в помещение при открытой
-            топочной дверке
-          </li>
-          <li> поступление дыма в помещение через топочную дверку при ветре</li>
-          <li> дымовой канал покрывается влагой и на наружной поверхности появляются темные пятна</li>
-          <li> выпадение топочных дверок и другой фурнитуры</li>
-          <li> недостаточный нагрев повехностей</li>
-          <li> сильный перегрев отдельных участков</li>
-          <li> быстрое охлаждение печи после топки</li>
-          <li> появление в кладке сквозных трещин, не поддающихся заделке</li>
-          <li> установка печных приборов, не соответствующих размеров, выступы
-            и шероховатости внутри дымовых каналов Своевременный и качественный ремонт печи имеет большое значение в
-            сохранении и поддержании прибора в нормальном эксплуатационном состоянии, а также обеспечении санитарной и
-            пожарной безопасности. В зависимости от характера и сложности работ проводится текущий, средний и
-            капитальный
-            ремонт.
-          </li>
-        </ul>
+        <div>
+          <b>Порядок очистки печи:</b>
+          <ul>
+            <li> — перед началом работ, производится проверка (осмотр) технического состояния тела печи и трубы дымохода;
+            </li>
+            <li> — для очистки внутренних дымовых каналов открываются инспекционные люки или извлекаются прочистные
+              кирпичи, после чего производится очистка каналов;
+            </li>
+            <li> — затем очищается прямоточного канал - дымоход;</li>
+            <li> — в завершении очищается топка, зольник, колосниковые решетки, внутренние части свода, топочные дверки.
+            </li>
+          </ul>
+        </div>
 
-        Порядок очистки печи
-        <ul>
-          <li> Перед началом работ, производится проверка (осмотр) технического состояния тела печи и трубы дымохода</li>
-          <li> для очистки внутренних дымовых каналов открываются инспекционные люки или извлекаются прочистные кирпичи,
-            после чего производится очистка каналов
-          </li>
-          <li> затем очищается прямоточного канал - дымоход</li>
-          <li> в завершении очищается топка, зольник, колосниковые решетки, внутренние части свода, топочные дверки.
-          </li>
-        </ul>
+
       </div>
       <div *ngSwitchCase="3">Бытовая чистка вентиляционных каналов в доме, квартире, офисе проводится как старым добрым
         способом с помощью стандартных инструментов Трубочиста, под названием тройка, так и с использованием более
@@ -109,6 +121,22 @@
         качество выполненных работ. На пищевых производствах (рестораны, кафе, столовые), где на стенках каналов
         образуются жировые отложения, производится удаление жировых отложений. Эта процедура достаточно трудоёмкая и
         проводится с применением щелочных растворов, скребков, паро- и пено- генераторов.
+        <div>
+          <b>Признаки, указывающие на необходимость чистки вентиляции в квартире и многоквартирном доме:</b>
+          <ul>
+            <li>— слабая/отсутствующая тяга в воздуховоде;</li>
+            <li>— загрязненные вентиляционные отверстия;</li>
+            <li>— рост уровня влажности в помещениях;</li>
+            <li>— образование обильного конденсата;</li>
+            <li>— застаивание неприятных запахов;</li>
+            <li>— разбухание деревянных дверей и мебели;</li>
+            <li>— появление аллергических реакций у жильцов;</li>
+            <li>— проблемы с дыхательной системой;</li>
+            <li>— учащение респираторных заболеваний.</li>
+          </ul>
+
+
+        </div>
       </div>
       <div *ngSwitchCase="4">В ходе обследования дымового канала проверяется тяга, чистота дымовых и вентиляционных
         каналов, наличие трещин и разрушений. По желанию заказчика возможно проведение анализа воздуха на наличие
@@ -120,22 +148,22 @@
         устранить их. По итогам проверки составляется технический отчет, содержащий заключение о результатах
         обследования, а также фото и видеоматериалы. Материалы технического отчета можно использовать для оценки
         стоимости ремонтно-восстановительных работ, а также для выставления претензий подрядчикам за некачественно
-        выполненную работу. Акт обследования дымоходов
+        выполненную работу.
+        <div>
+          <b>Обследование дымовых и вентиляционных каналов, для оформления акта, включает в себя:</b>
+          <ul>
+            <li> — проверку технического состояния дымовых и вентиляционных каналов на наличие нормальной тяги и
+              отсутствие засорений
+            </li>
+            <li> — наличие и состояние пожарных разделок в местах прохода дымохода через меж этажные перекрытия и кровлю
+            </li>
+            <li> — исправность и правильность расположения оголовков труб относительно крыш, близко расположенных
+              сооружений и деревьев, с целью определения зоны ветрового подпора.
+            </li>
+          </ul>
+        </div>
 
-        Обследование дымовых и вентиляционных каналов, для оформления Акта, включает в себя:
-        <ul>
-          <li> проверку технического
-            состояния дымовых и вентиляционных каналов на наличие нормальной тяги и отсутствие засорений
-          </li>
-          <li> наличие и
-            состояние пожарных разделок в местах прохода дымохода через меж этажные перекрытия и кровлю
-          </li>
-          <li> исправность и
-            правильность расположения оголовков труб относительно крыш, близко расположенных сооружений и деревьев, с
-            целью
-            определения зоны ветрового подпора.
-          </li>
-        </ul>
+
       </div>
       <div *ngSwitchCase="5">
         <p>
@@ -143,14 +171,19 @@
           успешно конкурирующие с классическими кладочными, выполненными из кирпича. Выбор огромен – сотни
           производителей
           из разных стран готовы удовлетворить даже самый изысканный каприз потребителя.
-        </p> Преимуществами сборных каминов
-        являются:
-        <ul>
-          <li>широкий модельный ряд и возможность выбора из каталога</li>
-          <li> эстетическая привлекательность</li>
-          <li>надежность и долговечность</li>
-          <li>относительная простота монтажных работ</li>
-        </ul>
+        </p>
+        <div>
+          <b>
+            Преимуществами сборных каминов являются:
+          </b>
+          <ul>
+            <li>— широкий модельный ряд и возможность выбора из каталога;</li>
+            <li>— эстетическая привлекательность;</li>
+            <li>— надежность и долговечность;</li>
+            <li>— относительная простота монтажных работ.</li>
+          </ul>
+        </div>
+
         <p>
           Сборный каминный комплекс представляет
           собой топочное устройство, выполненное из металла или чугуна, облицованного декоративными материалами.
@@ -165,21 +198,31 @@
           и до прогрева дымят. В зимний период, во время редких топок по выходным дням, возникают большие перепады
           температур, вызывающие в кладке напряжение и как следствие трещины в швах.
         </p>
-        Для дачных печек можно сформулировать
-        следующие требования:
-        <ul>
-          <li> быстрый нагрев помещения</li>
-          <li> конструкция должна выдерживать большие перепады температур</li>
-          <li>конструкция должна выдерживать сырость</li>
-        </ul>
+        <div>
+          <b>Для дачных печек можно сформулировать следующие требования:</b>
+          <ul>
+            <li> — быстрый нагрев помещения;</li>
+            <li> — конструкция должна выдерживать большие перепады температур;</li>
+            <li> — конструкция должна выдерживать сырость.</li>
+          </ul>
+        </div>
+
         Если учесть все вышеизложенные требования, то выбор неизменно должен
         пасть на современные металлические печи, к которым относятся:
         <ul>
-          <li> буржуйки</li>
-          <li> печи-камины</li>
-          <li>печки конвекционного типа и с водяным контуром</li>
+          <li>— буржуйки;</li>
+          <li>— печи-камины;</li>
+          <li>— печки конвекционного типа и с водяным контуром.</li>
         </ul>
       </div>
+      <div *ngSwitchDefault>
+        qwe
+      </div>
+    </div>
+    <div class="usluga__offer">
+      Учитывая вышеизложенное, наша компания предлагает вниманию юридических и физических лиц, заключение договора
+      обслуживания дымоходов, в соответствие с установленными регламентами, на постоянной основе, с хорошей скидкой.
+      Определение стоимости договора проводится после первичной проверки, на основании технических параметров.
     </div>
   </div>
 </div>
