--- a/src/assets/styles/uslugi.component.less
+++ b/src/assets/styles/uslugi.component.less
@@ -2,9 +2,9 @@
 
 .uslugi {
   &__container {
-    padding-top: 24px;
     max-width: 1280px;
     margin: 0 auto;
+    padding: 24px 24px 0 24px;
   }
 
   &__item {
@@ -13,16 +13,17 @@
     align-items: center;
     flex-direction: column;
     padding: 24px;
+    width: 33%;
 
     .item {
       &__image {
         background-color: #fcb446;
-        width: 100%;
         height: 300px;
 
         img {
           width: 100%;
           height: 100%;
+
         }
       }
 
@@ -33,6 +34,43 @@
         display: flex;
         align-items: center;
       }
+    }
+  }
+
+  &__often-questions {
+    .mat-expansion-panel {
+      margin: 24px 0;
+      padding: 24px 0;
+    }
+  }
+
+  @media @max-phone {
+    &__container {
+      padding: 0 8px;
+    }
+
+    &__item {
+      width: 100%;
+      max-width: 400px;
+
+      .item {
+        &__image {
+          max-width: 400px;
+
+        }
+      }
+    }
+  }
+
+  @media (max-width: 899px) and (min-width: 671px) {
+    &__item {
+      width: 50%;
+    }
+  }
+
+  @media (max-width: 1280px) and (min-width: 900px) {
+    &__item {
+      width: 40%;
     }
   }
 }
